# tree-sitter-mdx

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  jest.config.js  package-lock.json  package.json  pyproject.toml  setup.py  test-simple.mdx  tree-sitter.json
__tests__/: parser.test.js
bindings/go/: binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_mdx/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMdxTests/: TreeSitterMdxTests.swift
examples/: test.mdx  test2.mdx  test3.mdx
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: basic.txt
test/highlight/: basic.mdx
